@@ -2,7 +2,7 @@
 	If you're reading this in github, 
 	please change to Tabs-4 as github is broken.
 	============================================= */
-html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,img,ins,kbd,q,s,samp,small,strike,strong,sub,sup,tt,var,b,u,i,center,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,embed,figure,figcaption,footer,header,hgroup,menu,nav,output,ruby,section,summary,time,mark,audio,video{border:0;font-size:100%;font:inherit;vertical-align:baseline;margin:0;padding:0}article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section{display:block}body{line-height:1}ol,ul{list-style:none}blockquote,q{quotes:none}blockquote:before,blockquote:after,q:before,q:after{content:none}table{border-collapse:collapse;border-spacing:0}
+html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,img,ins,kbd,q,s,samp,small,strike,strong,sub,sup,tt,var,b,u,i,center,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,embed,figure,figcaption,footer,header,hgroup,menu,nav,output,ruby,section,summary,time,mark,audio,video{border:0;font-size:100%;font:inherit;vertical-align:baseline;margin:0;padding:0}article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section{display:block}body{line-height:1}ol,ul{list-style:none}blockquote,q{quotes:none}blockquote:before,blockquote:after,q:before,q:after{content:none}table{border-collapse:collapse;border-spacing:0} /* Resets */
 
 body,html 				{background:none; color:#444; width:100%; height:100%; margin:0; padding:0; font-family:Arial, Helvetica, sans-serif; text-rendering:optimizelegibility; word-wrap:break-word;}
 
@@ -50,10 +50,11 @@ table.countries a:hover		{color:#fff; text-decoration:none;}
 table.countries a:active	{color:#fff; text-decoration:none;}
 
 .dropdown_wrap			{width:920px; padding:20px; margin:0 auto; cursor:pointer;}
-.dropdown_title			{display:inline-block; padding-right:20px; vertical-align:top; color:#fff; font-weight:bold;}
-ul.dropdown				{display:inline-block; vertical-align:top; list-style:none; padding:0; margin:0 auto;}
-a.country_code			{width:100%; height:100%; color:#fff; font-size:1em; line-height:1.25em; display:block; vertical-align:top; text-align:left;}
-a.country_code:hover	{background-color:#2573CD;}
+.dropdown_title			{display:inline-block; padding:20px; vertical-align:top; color:#fff; font-weight:bold; font-size:1.2em; background-color:rgba(0, 40, 100, 0.7); border-radius:8px 0 0 8px;}
+.dropdown_list_wrap		{display:inline-block; vertical-align:top; width:420px;}
+ul.dropdown_list			{list-style:none; padding:0; margin:0 auto; width:100%;}
+a.country_code			{width:100%; height:100%; color:#fff; font-size:1.4em; line-height:1.15em; display:block; padding:5px 20px; vertical-align:top; text-align:left;}
+a.country_code:hover	{background-color:rgba(37, 115, 205, 0.7);}
 
 /*	Data Investigators alert
 	============================================= */
