@@ -13,11 +13,12 @@
 		<div class="overlay">
 			<div class="default center">
 				<img src="/art/dp_logo.index.png" width="400" height="350" alt="D-Portal logo"/>
-				<div style="width:100%; margin:0 auto; text-align:center; color:#fff; font-size:1.8em; line-height:1.35em;">
+				<div style="width:100%; margin:0 auto; text-align:center; color:#fff; font-size:1.2em; line-height:1.35em;">
 					Helping you understand IATI data.
 				</div>
 				<div class="dropdown_wrap">
-				<div class="dropdown_title">Choose a country</div><ul class="dropdown">
+				<div class="dropdown_title">Pick a country</div><div class="dropdown_list_wrap">
+				<ul class="dropdown_list">
 					<li><a class="country_code" href="AC">Ascension Island</a></li>
 					<li><a class="country_code" href="AD">Andorra</a></li>
 					<li><a class="country_code" href="AE">United Arab Emirates</a></li>
@@ -315,7 +316,7 @@
 					<li><a class="country_code" href="ZR">Zaire</a></li>
 					<li><a class="country_code" href="ZW">Zimbabwe</a></li>
 					</ul>
-				</div>
+				</div></div>
 			</div>
 		</div>
 	</div>
@@ -323,9 +324,9 @@
 <div class="footer_wrap">
 	<div class="footer">
 		<div class="team"><a href="http://www.aidtransparency.net/" title="International Aid Transparency Initiative (IATI)">
-			A project by the Development Portal team :}</a>
+			A 2014 project by the Development Portal team</a>
 		</div><div class="team top"><a onclick="$('html,body').animate({scrollTop:0},'slow');return false;">
-			Back to Top</a>
+			Top of page</a>
 		</div><div class="team git"><a href="https://github.com/IATI/IATI-Country-Tracker">
 			Fork us on Github!</a>
 		</div>
