@@ -408,8 +408,7 @@ BANGLADESH
 #view_tail
 		</div>
 	</div>
-</div>
-<div class="footer_wrap">
+	<div class="footer_wrap">
 	<div class="footer">
 		<div class="team"><a href="http://www.aidtransparency.net/" title="{footer_team_tip_text}">
 			{footer_team_text}</a>
@@ -419,7 +418,9 @@ BANGLADESH
 			{footer_github_text}</a>
 		</div>
 	</div>
+	</div>
 </div>
+
 
 #main_head
 <div class="default head">
