@@ -329,10 +329,10 @@ flag
 This is a heat map of all activities for {country_name} that have been provided with precise locations.
 
 #footer_team_text
-A project by the Development Portal team
+A 2014 project by the Development Portal team
 
 #footer_top_text
-Back to Top
+Top of page
 
 #footer_github_text
 Fork us on Github!
