@@ -335,10 +335,10 @@ drapeau
 Il s'agit d'une carte de chaleur de toutes les activités de {country_name} qui ont été fournis avec des emplacements précis.
 
 #footer_team_text 
-Un projet de l'équipe du Portail de développement 
+Un projet 2014 par l'équipe du Portail de développement
 
 #footer_top_text 
-Haut de page 
+Haut de la page 
 
 #footer_github_text 
 Fork nous sur Github!
