@@ -335,10 +335,10 @@ bandera
 Este es un mapa de calor de todas las actividades para {country_name} que han sido proporcionados con ubicaciones precisas.
 
 #footer_team_text 
-Un proyecto por el equipo de Portal de Desarrollo 
+Un proyecto de 2014 por el equipo del Portal de Desarrollo 
 
 #footer_top_text 
-Volver al principio 
+Principio de la página 
 
 #footer_github_text 
 Nosotros tenedor en Github!
