@@ -3,6 +3,8 @@ Development Portal (2014-03-24 shi)
 Refactor table code
 Do away with <1 month queries (increase site load)
 Added spinner for when things are loading
+No more crappy stickyfooter hacks, tables will set you free.
+Why? Because translations require flexible footer heights!
 
 
 Development Portal (2014-03-23 shi) ^o^
